--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="https://website-widgets.pages.dev/dist/sienna.min.js" defer></script>
   </body>
 </html>
